<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/txt_b2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/b2"
        android:textColorHighlight="@color/green"
        android:textSize="23sp" />

    <TextView
        android:id="@+id/txt_showmap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/btn_next2"
        android:text="@string/show_map"
        android:textColorHighlight="@color/green"
        android:textSize="23sp" />

    <Button
        android:id="@+id/btn_next2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btn_back2"
        android:layout_alignBottom="@+id/btn_back2"
        android:layout_alignParentRight="true"
        android:text="@string/next"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btn_back2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/txt_b2"
        android:layout_toLeftOf="@+id/btn_next2"
        android:text="@string/back"
        android:textSize="20sp" />

</RelativeLayout>